--- a/clv_processing/views/processing_host_view.xml
+++ b/clv_processing/views/processing_host_view.xml
@@ -110,7 +110,7 @@
         <field name="name">Processing Hosts</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">clv.processing.host</field>
-        <field name="view_type">form</field>
+        <!--*field name="view_type">form</field-->
         <field name="view_mode">tree,form</field>
         <field name="search_view_id" ref="clv_processing_host_view_search"/>
         <field name="domain">[]</field>
