--- a/clv_processing/views/processing_schedule_view.xml
+++ b/clv_processing/views/processing_schedule_view.xml
@@ -122,7 +122,7 @@
         <field name="name">Processing Schedules</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">clv.processing.schedule</field>
-        <field name="view_type">form</field>
+        <!--*field name="view_type">form</field-->
         <field name="view_mode">tree,form</field>
         <field name="search_view_id" ref="clv_processing_schedule_view_search"/>
         <field name="domain">[]</field>
