--- a/clv_processing/views/processing_template_view.xml
+++ b/clv_processing/views/processing_template_view.xml
@@ -111,7 +111,7 @@
         <field name="name">Processing Templates</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">clv.processing.template</field>
-        <field name="view_type">form</field>
+        <!--*field name="view_type">form</field-->
         <field name="view_mode">tree,form</field>
         <field name="search_view_id" ref="clv_processing_template_view_search"/>
         <field name="domain">[]</field>
