[REF] clv_processing (Migration to version 13.0)

--- a/clv_processing/wizard/processing_schedule_exec_view.xml
+++ b/clv_processing/wizard/processing_schedule_exec_view.xml
@@ -32,10 +32,9 @@
     <act_window 
         id="clv_processing_schedule_execute_action"
         name="Processing Schedule Execute"
-        src_model="clv.processing.schedule"
+        binding_model="clv.processing.schedule"
         res_model="clv.processing.schedule.execute"
         view_mode="form"
-        key2="client_action_multi"
         target="new"
     />
 
