[IMP] clv_processing (ADD method_args)

--- a/clv_processing/views/processing_schedule_view.xml
+++ b/clv_processing/views/processing_schedule_view.xml
@@ -33,6 +33,7 @@
                         <group name="group_right">
                             <field name="model"/>
                             <field name="method"/>
+                            <field name="method_args"/>
                         </group>
                         <group name="sync">
                         </group>
@@ -88,6 +89,7 @@
                 <field name="date_inclusion"/>
                 <field name="model"/>
                 <field name="method"/>
+                <field name="method_args"/>
                 <field name="notes"/>
                 <field name="active" invisible="1"/>
             </tree>
@@ -106,6 +108,7 @@
                 <field name="date_inclusion"/>
                 <field name="model"/>
                 <field name="method"/>
+                <field name="method_args"/>
                 <field name="notes"/>
                 <separator/>
                 <filter string="Archived" name="inactive" domain="[('active','=',False)]"/>
@@ -113,6 +116,8 @@
                     <filter name="filter_external_host_id" string="External Host" context="{'group_by': 'external_host_id'}"/>
                     <filter name="filter_template_id" string="Processing Template" context="{'group_by': 'template_id'}"/>
                     <filter name="filter_model" string="Model" context="{'group_by': 'model'}"/>
+                    <filter name="filter_method" string="Method" context="{'group_by': 'method'}"/>
+                    <filter name="filter_method_args" string="Method Arguments" context="{'group_by': 'method_args'}"/>
                 </group>
             </search>
         </field>
